<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SymC</string>
    <string name="title_activity_throat_pain">How Bad is Your Throat Pain?</string>
    <string name="title_activity_eat">Can You Eat?</string>
    <string name="under_control">Under Control</string>
    <string name="moderate">Moderate</string>
    <string name="bad">Bad</string>
    <string name="yes">Yes</string>
    <string name="somewhat">Somewhat</string>
    <string name="no">No</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="title_activity_medication">Which Medication</string>
    <string name="did_you_take_any_of_these_">Did you take any of these?</string>
    <string name="lortab">LorTab</string>
    <string name="oxycontin">OxyContin</string>
    <string name="finish">Finish</string>
    <string name="throat_pain_selected">ThroatPainSelected</string>
    <string name="eat_selected">EatSelected</string>
    <string name="title_activity_graph">Patient Health</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">Log In</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_name">User Name/Email</string>
    <string name="password">Password</string>
	<string name="retype_password">Retype Password</string>
	
</resources>
